# xHook

./: .gitignore  build_libs.cmd  build_libs.sh  clean_libs.cmd  clean_libs.sh  install_libs.sh
docs/overview/code/: run.sh
docs/overview/code/libtest/jni/: Application.mk
docs/overview/code/main/jni/: main.c
libbiz/jni/: Android.mk  biz.c
libtest/jni/: test.c
libtouch/jni/: Android.mk  touch.c  touch.cc
xhookwrapper/: readme.md  settings.gradle
xhookwrapper/app/: app-debug.apk  build.gradle
xhookwrapper/app/app-debug.apk.cache/: code-version
xhookwrapper/app/src/main/java/com/qiyi/xhookwrapper/: MainActivity.java
xhookwrapper/app/src/main/java/com/xfhy/touch/: TouchTest.java  TouchView.java
xhookwrapper/app/src/main/res/layout/: activity_main.xml
xhookwrapper/biz/: biz-debug.aar
xhookwrapper/libtouch/: build.gradle
xhookwrapper/libtouch/src/main/: AndroidManifest.xml
xhookwrapper/libtouch/src/main/cpp/: CMakeLists.txt  touch.cpp
xhookwrapper/xhook/: readme.md  xhook-debug.aar
